--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body> <!-- Preloader -->
   <div id="preloader" class="preloader" aria-hidden="false">
-    <div class="preloader-inner"> <img id="preloader-logo" src="Logo.png" alt="PortEX Trading logo"
+    <div class="preloader-inner"> <img id="preloader-logo" src="image/Logo.png" alt="PortEX Trading logo"
         onerror="this.style.display='none'">
       <div id="preloader-text" class="preloader-text">PortEX Trading</div>
     </div>
@@ -20,7 +20,7 @@
    <!-- Header / Navbar -->
   <header class="site-header">
     <nav class="navbar" role="navigation" aria-label="Main navigation">
-      <div class="brand"> <img src="Logo.png" alt="PortEX Trading logo" class="logo" id="logo-header"
+      <div class="brand"> <img src="image/Logo.png" alt="PortEX Trading logo" class="logo" id="logo-header"
           onerror="this.style.display='none'"> <span id="firm-name" class="firm-name sr-only">PortEX Trading</span>
         <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="main-nav"
           aria-label="Toggle navigation" > ☰ </button> </div>
